--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <h1>Kaixo Mundua</h1>
-        <p style="">asjkdfilausgdfilgildufglasduigfliasugdu</p>
+        <p style="color:green;">asjkdfilausgdfilgildufglasduigfliasugdu</p>
     </body>
 </html>
